# LLM_infer

./: .dockerignore  .gitignore  Awq.md  CMakeLists.txt  CUDA_GRAPH_TOGGLE.md  Dockerfile  OpenCamp项目报告.md  Qwen2.5-1.5B-Instruct_shapes.json  Qwen3-1.7B_shapes.json  README.md  README_logits_visualization.md  amazing_order.md  build.sh  check_awq_scales.py  check_fp16_zeros.py  check_scales.py  compare_embedding.py  compare_tensors.py  dev.sh  ib.sh  ncu.sh  nsys.sh  nsys_profile_report.nsys-rep  print_model_shapes.py  pro.md  quantize_qwen.py  quantize_qwen3.py  readme.md  run.sh  test.py  test.sh  test_hi.py  test_speculative_decoding.py  visualize_logits.py
backend/cpp/: preprocessed.cpp
backend/cpp/include/: CudaMemoryPool.hpp  advanced_kernels.cuh  avx_operators.hpp  base_model.hpp  common.hpp  cudaOP.cuh  device_manager.hpp  inference.hpp  kvcache_base.hpp  llama.hpp  operators.hpp  ptx_common.h  qwen.hpp  qwen3.hpp  speculative_decoder.hpp  tensor.hpp  thread_pool.hpp  weight_tensor.hpp
backend/cpp/include/operators/: operator_base.hpp  operator_factory.hpp  unified_operators.hpp
backend/cpp/include/operators/cpu/: add_cpu.hpp  matmul_cpu.hpp  multiply_cpu.hpp  rms_norm_cpu.hpp  rope_cpu.hpp  sample_cpu.hpp  silu_cpu.hpp
backend/cpp/include/operators/cuda/: add_cuda.cuh  cuda_resource_manager.cuh  multiply_cuda.cuh  rms_norm_cuda.cuh  rope_cuda.cuh  silu_cuda.cuh  softmax_cuda.cuh
backend/cpp/include/operators/cuda/matmul/: awq_matmul_cuda.cuh  cublas_matmul_cuda.cuh  cutlass_matmul_cuda.cuh  matmul_cuda.cuh  matmul_selector.hpp
backend/cpp/include/operators/matmul/: awq_matmul_cuda.cuh  cublas_matmul_cuda.cuh  cutlass_matmul_cuda.cuh  matmul.hpp  matmul_cpu.hpp  matmul_cuda.cuh  matmul_selector.hpp
backend/cpp/src/: CudaMemoryPool.cpp  cudaOP.cu  inference.cpp  llama_decode.cpp  llama_prefill.cpp  qwen.cpp  qwen3.cpp  qwen3_forward.cpp  qwen3_prefill.cpp  speculative_decoder.cpp  thread_pool.cpp
backend/cpp/src/CUDAoperators/: CMakeLists.txt  add.cu  add_rms.cu  advanced_kernels.cu  attention_cublas.cu  attention_wmma.cu  awq_gemv_gemm.cu  basic.cu  cudaOP.cu  cutlass_c_api.h  cutlass_c_wrapper.cu  cutlass_c_wrapper.h  decode_qkv_matmul.cu  flash_attention.cu  flash_attention_graph.cu  flash_attention_variable.cu  flash_attn_prefill.cu  gather.cu  gather_fa.cu  gather_fa_graph.cu  gather_fa_variable.cu  gemm_gqa_prefill.cu  gemmv.cu  gemmv_scores.cu  gemv_mlp.cu  gemv_qkv.cu  gemv_qkv_rope.cu  gemv_scores.cu  layer_norm.cu  matmul.cu  matmul_awq.cu  multiply.cu  page_attention.cu  ptx_common.h  ptx_common.hpp  rope_device_offset.cu  rope_kv_fused.cu  sample.cu  sample_with_prob.cu  silu.cu  (+2 more)
backend/cpp/src/operators/: CMakeLists.txt  QWEN3_COMPUTE_GRAPH.md  README.md
backend/cpp/src/operators/cpu/: add_cpu.cpp  matmul_cpu.cpp  multiply_cpu.cpp  rms_norm_cpu.cpp  rope_cpu.cpp  rope_cpu.hpp  silu_cpu.cpp
backend/cpp/src/operators/cuda/: add_cuda.cu  matmul_selector.cpp  multiply_cuda.cu  rms_norm_cuda.cu  rope_cuda.cu  rope_cuda.cuh  silu_cuda.cu  softmax_cuda.cu
backend/cpp/src/operators/cuda/matmul/: awq_matmul_cuda.cu  cublas_matmul_cuda.cu  cutlass_matmul_cuda.cu  matmul_cuda.cu
cute_study/: CMakeLists.txt  README.md  bf16_gemm.cu  build.sh  comprehensive_bf16_benchmark.cu  cublas_bf16_matmul.cu  cuda_add_simple.cu  cuda_matmul_simple.cu  cute_add.cu  cute_bf16_matmul.cu
data/: chat_profile_20250412_155828.ncu-rep
frontend/: QwenTest.py  chat.py  qwen3_inspect.py  qwen_terminal_chat.py  report_final.nsys-rep  report_final.sqlite  tempCodeRunnerFile.py  terminal_chat.py  web_ui.py
interface/: device_config.py  model_bridge.cpp  model_factory.hpp  model_initializer.cpp  model_initializer.hpp  weight_processor.hpp
interface/include/: llama_weight_processor.hpp  qwen3_weight_processor.hpp  qwen_weight_processor.hpp  weight_processor.hpp  weight_processor_base.hpp  weight_processor_utils.hpp
interface/src/: qwen3_initializer.cpp
interface/src/weight_processors/: llama_weight_processor.cpp  qwen3_weight_processor.cpp  qwen_weight_processor.cpp  weight_processor_base.cpp  weight_processor_utils.cpp
interface/weight_processors/: llama_weight_processor.cpp  qwen_weight_processor.cpp  weight_processor_base.cpp
models_analysis/: analyze_qwen_model.py  qwen_model_structure.py
test/: CMakeLists.txt  avx_matmul_bench.cpp
tools/: awq_debug.py  binary_utils.py  model_analysis.py
